--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,14 +1,18 @@
 services:
     swis_google_analytics_extension:
         class:                              Swis\Bundle\GoogleAnalyticsBundle\Twig\GoogleAnalyticsExtension
-        arguments:                          [ "%swis_google_analytics.tracking_id%" ]
+        arguments:                          [ "%swis_google_analytics.config%" ]
         tags:
             -                               { name: twig.extension }
-    kernel.listener.your_listener_name:
-        class:                              Swis\Bundle\GoogleAnalyticsBundle\Listener\AnalyticsListener
-        arguments:                          [ "@event_dispatcher" ]
+    swis_google_analytics.flash_bag_handler:
+        class:                              Swis\Bundle\GoogleAnalyticsBundle\Service\FlashBagHandler
+        calls:
+            -                               [setRequest, ["@?request="]]
+    swis_google_analytics.default_events_listener:
+        class:                              Swis\Bundle\GoogleAnalyticsBundle\Listener\DefaultEventsListener
+        arguments:                          [ "@swis_google_analytics.flash_bag_handler" ]
         tags:
-            -                               { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
-            -                               { name: kernel.event_listener, event: security.implicit_login, method: onSecurityImplicitLogin }
+            -                               { name: kernel.event_listener, event: security.interactive_login,      method: onSecurityInteractiveLogin }
+            -                               { name: kernel.event_listener, event: security.implicit_login,         method: onSecurityImplicitLogin }
             -                               { name: kernel.event_listener, event: fos_user.registration.confirmed, method: onRegistrationConfirmed }
             -                               { name: kernel.event_listener, event: fos_user.registration.completed, method: onRegistrationCompleted }
