--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,11 +8,12 @@ services:
         class:                              Swis\Bundle\GoogleAnalyticsBundle\Service\FlashBagHandler
         calls:
             -                               [setRequest, ["@?request="]]
-    swis_google_analytics.default_events_listener:
-        class:                              Swis\Bundle\GoogleAnalyticsBundle\Listener\DefaultEventsListener
+    swis_google_analytics.event_listener:
+        class:                              Swis\Bundle\GoogleAnalyticsBundle\Listener\EventListener
         arguments:                          [ "@swis_google_analytics.flash_bag_handler" ]
         tags:
             -                               { name: kernel.event_listener, event: security.interactive_login,      method: onSecurityInteractiveLogin }
             -                               { name: kernel.event_listener, event: security.implicit_login,         method: onSecurityImplicitLogin }
             -                               { name: kernel.event_listener, event: fos_user.registration.confirmed, method: onRegistrationConfirmed }
             -                               { name: kernel.event_listener, event: fos_user.registration.completed, method: onRegistrationCompleted }
+            -                               { name: kernel.event_listener, event: kernel.exception,                method: onKernelException }
