--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -10,7 +10,7 @@ services:
             -                               [setRequest, ["@?request="]]
     swis_google_analytics.event_listener:
         class:                              Swis\Bundle\GoogleAnalyticsBundle\Listener\EventListener
-        arguments:                          [ "@swis_google_analytics.flash_bag_handler" ]
+        arguments:                          [ "@swis_google_analytics.flash_bag_handler", "%swis_google_analytics.config%" ]
         tags:
             -                               { name: kernel.event_listener, event: security.interactive_login,      method: onSecurityInteractiveLogin }
             -                               { name: kernel.event_listener, event: security.implicit_login,         method: onSecurityImplicitLogin }
